--- a/templates/spiaa.html
+++ b/templates/spiaa.html
@@ -8,22 +8,28 @@
   <link href="{{  url_for('static', filename='css/styles.css')}}" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-expand-md bg-dark py-3" data-bs-theme="dark">
+  <nav class="navbar navbar-expand-md bg-dark py-2" data-bs-theme="dark">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="{{  url_for('home')}}">
-        <span class="bs-icon-sm bs-icon-rounded bs-icon-primary d-flex justify-content-center align-items-center me-2 bs-icon">
+        <a class="navbar-brand d-flex align-items-center" href="#">
+          <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
+            <img src="{{ url_for('static', filename='images/logo.svg') }}" 
+                 alt="Logo" 
+                 width="80" 
+                 height="80" 
+                 style="filter: invert(1); margin-right: 15px; border-radius: 75%;">
         </span>
-        <span>Real-Time Stock Price Analyis</span>
+          
+          <!-- <span><a id="homebtn" href="{{ url_for('home') }} ">Real-Time Stock Price Analysis</a></span> -->
       </a>
       <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
         <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navcol-5">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('home') }}">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('add_stocks') }}">My Stocks</a></li>
+          <li class="nav-item"><a class="nav-link active" href="{{ url_for('home') }}">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('add_stocks') }}">Portfolios</a></li>
         </ul>
-        <ul class="navbar-nav"></ul>
+        <ul class="navbar-nav">
           <li class="nav-item">
             <div style="position: relative;">
               <input type="text" id="search" placeholder="Search Stocks">
@@ -35,21 +41,31 @@
     </div>
   </nav>
     <div id="main_info" style="margin-top: 1rem">
-        <h1 id="company_name" style="margin-left: 2.5rem;margin-top: 1rem;width: 400px;font-weight: bold;font-size: 30px;display: inline-block;--bs-body-font-weight: 400;"><strong>{{name}}</strong> ({{symbol}})</h1>      
-        </div>
-    <div id="candle_graph" style="width: 97%;height: 300px;margin-top: 1rem;margin-right: 1rem;margin-bottom: 1rem;margin-left: 1rem;display: flex;position: relative;">
-        <div id="candleChart" style="width: 100%;"></div>
+        <h1 id="company_name"><strong>{{name}}</strong> ({{symbol}})</h1>      
+    </div>
+    <div id="candle_graph" class="container-fluid" style="margin-top: 1rem;">
+        <div id="candleChart" style="width: 100%; height: 100%;"></div>
     </div>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script>
         const chartData = JSON.parse('{{ chart_data | safe }}');
         
+        function resizeChart() {
+            Plotly.relayout('candleChart', {
+                'xaxis.autorange': true,
+                'yaxis.autorange': true
+            });
+        }
+
         Plotly.newPlot('candleChart', chartData, {});
+        window.addEventListener('resize', resizeChart);
+        resizeChart(); // Initial call to ensure the chart is properly sized
     </script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
