--- a/templates/adds.html
+++ b/templates/adds.html
@@ -7,14 +7,37 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 </head>
 <body>
-    <header class="navbar">
-        <div class="logo">Real-Time Stock Price Analyzer</div>
-            <ul>
-                <li><a href="preview.html">Home</a></li>
-                <li><a href="adds.html">Portfolio</a></li>
-            </ul>
-        </nav>
-    </header>
+    <nav class="navbar navbar-expand-md bg-dark py-2" data-bs-theme="dark">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
+                    <img src="{{ url_for('static', filename='images/logo.svg') }}" 
+                         alt="Logo" 
+                         width="80" 
+                         height="80" 
+                         style="filter: invert(1); margin-right: 15px; border-radius: 75%;">
+                </span>
+                <!-- Removed Real-Time Stock Price Analyzer name -->
+            </a>
+            <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
+                <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navcol-5">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="{{ url_for('home') }}">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('add_stocks') }}">Portfolios</a></li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <div style="position: relative;">
+                            <input type="text" id="search" placeholder="Search Stocks">
+                            <div id="suggestions" style="background-color:#eee;"></div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <main>
         <section id="add" class="section">
