--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,7 @@
                  height="80" 
                  style="filter: invert(1); margin-right: 15px; border-radius: 75%;">
         </span>
-          
-          <span><a id="homebtn" href="{{ url_for('home') }} ">Real-Time Stock Price Analysis</a></span>
+          <!-- Removed Real-Time Stock Price Analysis name -->
       </a>
       <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-5">
         <span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span>
