--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -6,13 +6,6 @@
   <title>SwiftStock - Stock Price Analysis ({{name}})</title>
   <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
   <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-  <style>
-    /* Ensure the chart container takes full width and height of its parent */
-    #candleChart {
-      width: 100%;
-      height: 400px; /* Adjust the height as needed */
-    }
-  </style>
 </head>
 <body>
   <nav class="navbar navbar-expand-md bg-dark py-2" data-bs-theme="dark">
@@ -52,14 +45,16 @@
     <div id="candleChart"></div>
   </div>
   <!-- Timeframe Buttons -->
-  <div class="container text-center mt-3">
-    <div class="btn-group" role="group" aria-label="Timeframe buttons">
-      <button type="button" class="btn btn-outline-primary" onclick="updateChart('1W')">1W</button>
-      <button type="button" class="btn btn-outline-primary" onclick="updateChart('1M')">1M</button>
-      <button type="button" class="btn btn-outline-primary" onclick="updateChart('1Y')">1Y</button>
-      <button type="button" class="btn btn-outline-primary" onclick="updateChart('5Y')">5Y</button>
+  <form class="year-buttons" method="POST">
+    <div class="container text-center mt-3">
+      <div class="btn-group" role="group" aria-label="Timeframe buttons">
+        <button type="submit" name="timeframe" value="1W" class="btn btn-outline-primary">1W</button>
+        <button type="submit" name="timeframe" value="1M" class="btn btn-outline-primary">1M</button>
+        <button type="submit" name="timeframe" value="1Y" class="btn btn-outline-primary">1Y</button>
+        <button type="submit" name="timeframe" value="5Y" class="btn btn-outline-primary">5Y</button>
+      </div>
     </div>
-  </div>
+  </form>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script>
     const chartData = JSON.parse('{{ chart_data | safe }}');
