--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -10,7 +10,7 @@
 <body>
   <nav class="navbar navbar-expand-md bg-dark py-2" data-bs-theme="dark">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center" href="#">
+      <a class="navbar-brand d-flex align-items-center" href="{{ url_for('home') }}">
         <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
           <img src="{{ url_for('static', filename='images/logo.svg') }}" 
                alt="Logo" 
