--- a/templates/index.html
+++ b/templates/index.html
@@ -86,7 +86,8 @@
 </div>
 <!-- Centered vertically long card for portfolio summary (Placeholder) -->
 <div class="row justify-content-center">
-  <div class="col-md-4 mb-3">
+  {% for portfolio in portfolios %}
+    <div class="col-md-4 mb-3">
       <div class="card">
           <div class="card-body">
               <h2 class="card-title">PORTFOLIO NAME</h2>
@@ -124,6 +125,7 @@
           </div>
       </div>
   </div>
+  {% endfor %}
 </div>
 
 
