--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
           <span class="bs-icon-sm d-flex justify-content-center align-items-center me-3">
             <img src="{{ url_for('static', filename='images/logo.svg') }}" 
                  alt="Logo" 
-                 width="80" 
-                 height="80" 
-                 style="filter: invert(1); margin-right: 15px; border-radius: 75%;">
+                 width="160" 
+                 height="106.67" 
+                 style="filter: invert(1); margin-right: 15px;">
         </span>
           <!-- Removed Real-Time Stock Price Analysis name -->
       </a>
