--- a/templates/spiaalatest.html
+++ b/templates/spiaalatest.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navcol-5">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link active" href="{{ url_for('home') }}">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="{{ url_for('add_stocks') }}">Portfolios</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('stock_monitoring') }}">Stock Monitoring</a></li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
